--- a/package.json
+++ b/package.json
@@ -9,18 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^6.0.0",
+    "@material-tailwind/react": "^2.1.9",
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
+    "framer-motion": "^11.2.10",
+    "next": "14.2.3",
+    "postcss-normalize": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-scroll-parallax": "^3.4.5",
+    "tsparticles": "^3.4.0",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^9.5.14",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5"
   }
 }
