--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fullhuman/postcss-purgecss": "^6.0.0",
     "@material-tailwind/react": "^2.1.9",
     "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/preset-firefly": "^3.1.0",
+    "@tsparticles/preset-sea-anemone": "^3.1.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
     "framer-motion": "^11.2.10",
